# cpu_simulator

./: CMakeLists.txt
configs/: 8bit.json  tiny4.json
src/: main.cpp
src/core/: config.cpp  config.hpp  cpu.cpp  cpu.hpp
src/core/alu/: alu.cpp  alu.hpp
src/core/assembly/: assembler.cpp  assembler.hpp
src/core/execution/: decoder.cpp  decoder.hpp  executor.cpp  executor.hpp
src/core/memory/: memory.cpp  memory.hpp
src/core/peripherals/: declarative_peripheral.cpp  declarative_peripheral.hpp
src/core/registers/: register_file.cpp  register_file.hpp
tests/: test_alu_operations.cpp  test_assembler.cpp  test_config_parser.cpp  test_cpu_integration.cpp  test_decoder.cpp  test_memory.cpp  test_register_file.cpp
